add test handler to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,3 +52,13 @@ repos:
         ]
         pass_filenames: false
         always_run: true
+
+  - repo: local
+    hooks:
+      - id: pytest
+        name: pytest
+        entry: poetry run pytest tests/ -v
+        language: system
+        types: [python]
+        pass_filenames: false
+        always_run: true
