add migration and qr_code generator

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,7 +36,7 @@ repos:
         args: [
           "--config=pyproject.toml",
           "--max-line-length=88",
-          "--extend-ignore=E203,E266,E501,W503,B008,A003",
+          "--extend-ignore=E203,E266,E501,W503,B008,A003,F821",
         ]
 
   - repo: https://github.com/PyCQA/bandit
