--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-multipart = ">=0.0.6,<1.0"
 authlib = ">=1.2,<2.0"
 boto3 = ">=1.34,<2.0"
 pillow = ">=10.0,<11.0"
+qrcode = {extras = ["pil"], version = "^8.2"}
 requests = ">=2.31,<3.0"
 redis = ">=5,<6"
 elasticsearch = ">=8.11,<9.0"
