--- a/env.example
+++ b/env.example
@@ -30,6 +30,7 @@ VK_REDIRECT_URI=http://localhost:8000/api/v1/auth/vk/callback
 # === URLs ===
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:8000
+REDIRECT_SERV_URL=http://localhost
 
 # === Geocoding settings ===
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
